Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12691

obd_max_recoverable_clients is not atomic

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.13.0, Lustre 2.12.4
    • Lustre 2.10.8
    • None
    • 3
    • 9223372036854775807

      Originally obd_max_recoverable_clients is not increased at the same moment.
      But because of LU-3540, it will be increased by multiple processes.
      This causes LBUG.

      The type of obd_max_recoverable_clients should be atomic_t and be handled by atomic operations.

            takamura Tatsushi Takamura
            takamura Tatsushi Takamura
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: